--- a/Views/DaData/DaData.cshtml
+++ b/Views/DaData/DaData.cshtml
@@ -1,6 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@page
+@model DaDat_ASP.net.Views.DaData.DaData
 @{
-    <h1>Да работаю я, Работаю! Отебись уже!</h1>
+    
 }
+
+<p>Видимо мне нужна страница, а не представление! Мать его разэдак, твою дивизию...</p>
